<resources>
    <string name="app_name">Motorport</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_myvehicles">Mis Vehículos</string>
    <string name="title_activity_addvehicle">Registrar Vehículo</string>
    <string name="title_activity_editvehicle">Editar Vehículo</string>
    <string name="label_item_map">Mapa</string>
    <string name="label_item_trip">Viajes</string>
    <string name="label_item_workshop">Talleres</string>
    <string name="label_item_appointment">Citas</string>
    <string name="label_item_settings">Cuenta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_btn_editprofile">Editar Perfil</string>
    <string name="label_btn_favworkshops">Mecánicos de Confianza</string>
    <string name="label_btn_payments">Métodos de Pago</string>
    <string name="label_btn_myvehicles">Mis Vehículos</string>
    <string name="label_image_user">User Profile Image</string>
    <string name="label_btn_logout">Cerrar Sesión</string>
    <string name="label_btn_edit">Editar</string>
    <string name="label_image_moreoptions">Más Opciones</string>
    <string name="label_field_registrationplate">PLACA:</string>
    <string name="label_image_vehicle">Foto del vehículo</string>
    <string name="label_btn_changephoto">Cambiar foto</string>
    <string name="label_hint_vehicletype">Tipo</string>
    <string name="label_hint_vehiclebrand">Marca</string>
    <string name="label_hint_vehiclemodel">Modelo</string>
    <string name="label_hint_registrationplate">Placa</string>
    <string name="label_text_vehicleformterms">Al registrar un vehículo, todos los usuarios de la suscripción tendrán acceso</string>
    <string name="label_btn_registervehicle">REGISTRAR</string>
    <string name="label_btn_createaccount">CREAR CUENTA</string>
    <string name="label_btn_login">INICIAR SESIÓN</string>
    <string name="label_hint_email">Correo electrónico</string>
    <string name="label_hint_password">Contraseña</string>
    <string name="label_hint_donthaveaccount">No tengo una cuenta</string>
    <string name="label_hint_forgotpassword">OLVIDASTE TU CONTRASEÑA?</string>
    <string name="label_btn_loginform">INGRESAR</string>
    <string name="message_invalid_email">Ingrese un correo válido</string>
    <string name="message_empty_password">Ingrese contraseña</string>
    <string name="message_login_error">Correo o clave incorrecta</string>
    <string name="message_empty_vehicletype">Ingrese tipo de vehículo</string>
    <string name="message_empty_vehiclebrand">Ingrese marca</string>
    <string name="message_empty_model">Ingrese modelo</string>
    <string name="message_empty_regplate">Ingrese placa</string>
    <string name="label_hint_year">Año</string>
    <string name="label_hint_kilometers">Kilómetros</string>
    <string name="message_empty_year">Ingrese año</string>
    <string name="message_empty_kilometers">Ingrese kilómetros</string>
    <string name="message_onsave_vehicle">Se ha agregado el vehículo satisfactoriamente</string>
    <string name="message_onupdate_vehicle">Se ha actualizado el vehículo satisfactoriamente</string>
    <string name="label_item_delete">Eliminar</string>
    <string name="message_ondelete_vehicle">Se ha eliminado el vehículo satisfactoriamente</string>
    <string name="label_image_workshop">Foto del taller mecánico</string>
    <string name="label_imgbtn_moreoptions">Más Opciones</string>
    <string name="label_btn_mechworkshop_details">Ver</string>
    <string name="title_activity_mechanicalworkshop">Detalle de taller mecánico</string>
    <string name="label_btn_appointment">RESERVAR CITA</string>
    <string name="label_btn_workshop_services">SERVICIOS</string>
    <string name="label_btn_addtofavorites">AÑADIR A MECÁNICOS DE CONFIANZA</string>
    <string name="label_text_workshopname">Nombre:</string>
    <string name="label_text_workshopcountry">País:</string>
    <string name="label_text_workshopdepartment">Departamento:</string>
    <string name="label_text_workshopcity">Ciudad:</string>
    <string name="label_text_workshopaddress">Dirección:</string>
    <string name="label_imgbtn_favorite">Botón de añadir a favoritos</string>
    <string name="title_activity_favoriteworkshops">Mecánicos de confianza</string>
</resources>
