<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clVehicleForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.VehicleFormActivity">

    <ImageView
        android:id="@+id/ivVehicle"
        android:layout_width="@dimen/dimen_image_vehicle"
        android:layout_height="@dimen/dimen_image_vehicle"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/label_image_vehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_directions_car_24px" />

    <Button
        android:id="@+id/btnChangeImage"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_btn_changephoto"
        app:layout_constraintEnd_toEndOf="@+id/ivVehicle"
        app:layout_constraintStart_toStartOf="@+id/ivVehicle"
        app:layout_constraintTop_toBottomOf="@+id/ivVehicle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_hint_vehicletype" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBrand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilType">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_hint_vehiclebrand" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilBrand">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_hint_vehiclemodel" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegPlate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilModel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietRegPlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_hint_registrationplate" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvVehicleFormTerms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/label_text_vehicleformterms"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tilRegPlate"
        app:layout_constraintStart_toStartOf="@+id/tilRegPlate"
        app:layout_constraintTop_toBottomOf="@+id/tilRegPlate" />

    <Button
        android:id="@+id/btnRegisterVehicle"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_btn_registervehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVehicleFormTerms" />
</androidx.constraintlayout.widget.ConstraintLayout>