<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvVehicle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_sm"
    android:elevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCardVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivVehicle"
            android:layout_width="@dimen/dimen_image_vehicle"
            android:layout_height="@dimen/dimen_image_vehicle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/label_image_vehicle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvVehicleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toEndOf="@+id/ivVehicle"
            app:layout_constraintTop_toTopOf="@+id/ivVehicle"
            tools:text="CHEVROLET CAMARO" />

        <TextView
            android:id="@+id/tvRegPlateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/label_field_registrationplate"
            app:layout_constraintStart_toEndOf="@+id/ivVehicle"
            app:layout_constraintTop_toBottomOf="@+id/tvVehicleName" />

        <TextView
            android:id="@+id/tvRegistrationPlate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto"
            app:layout_constraintStart_toEndOf="@+id/tvRegPlateLabel"
            app:layout_constraintTop_toTopOf="@+id/tvRegPlateLabel"
            tools:text="ABC123" />

        <Button
            android:id="@+id/btnEditVehicle"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/btnMoreOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/white"
            android:contentDescription="@string/label_image_moreoptions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more_vert_24px" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>